Remove testing file and update travis
Refs #5

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ services:
   - docker
 
 before_install:
-  - docker run dockerfiles/Mantid_Dockerfile
+  - docker build -t unit-test-env .
+
+script:
+  - docker run -t unit-test-env
