Add codecoverage to CI via docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t unit-test-env .
+  - docker build -t unit-test-env -f docker/Dockerfile.test .
 
 script:
-  - docker run -t unit-test-env
+  - token=d9212b19-6bbd-4466-8f45-18414480f879
+  - ci_env="bash <(curl -s https://codecov.io/env)"
+  - ci_post_cov="bash <(curl -s https://codecov.io/bash) -t $token"
+  - docker run -t unit-test-env /bin/bash -c "$ci_env && pytest /root/mantid_total_scattering/ && coverage run -m pytest /root/mantid_total_scattering/  && $ci_post_cov"
