--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -15,13 +15,10 @@ ENV PYTHONPATH         ${MANTIDPATH}:${TSREPO}:${PYTHONPATH}
 # Install python dependencies
 RUN apt-get update && \
     apt-get -y upgrade && \
-    apt-get install python-pip -y && \
-    pip install pytest
+    apt-get install python-pip curl git -y && \
+    pip install pytest codecov
 
 # Copy Insturment geometry caches
 RUN mkdir -p /root/.mantid/instrument/geometryCache
 
-COPY ./dockerfiles/POLARIS9fbf7121b4274c833043ae8933ec643ff7b9313d.vtp /root/.mantid/instrument/geometryCache/POLARIS9fbf7121b4274c833043ae8933ec643ff7b9313d.vtp
-
-# Run unit tests
-CMD ["pytest", "/root/mantid_total_scattering/"]
+COPY ./test_data/POLARIS9fbf7121b4274c833043ae8933ec643ff7b9313d.vtp /root/.mantid/instrument/geometryCache/POLARIS9fbf7121b4274c833043ae8933ec643ff7b9313d.vtp
