Disabled UpdateInstrumentDefinitions.OnStartup to skirt seg fault

--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,6 +1,3 @@
-# Get python version
-FROM python:2.7-slim
-
 # Install mantid image
 FROM mantidproject/mantid:nightly_ubuntu16.04
 
@@ -20,5 +17,10 @@ RUN apt-get update && \
 
 # Copy Insturment geometry caches
 RUN mkdir -p /root/.mantid/instrument/geometryCache
-
 COPY ./test_data/POLARIS9fbf7121b4274c833043ae8933ec643ff7b9313d.vtp /root/.mantid/instrument/geometryCache/POLARIS9fbf7121b4274c833043ae8933ec643ff7b9313d.vtp
+
+# Hack for seg fault when DownloadInstrument gets called inside container from "import mantid.simpleapi"
+RUN echo "UpdateInstrumentDefinitions.OnStartup = 0" > /root/.mantid/Mantid.user.properties
+
+# Move to work directory
+WORKDIR $TSREPO
