--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ services:
 
 before_install:
   - docker build -t unit-test-env -f docker/Dockerfile.test .
+  - test_cmd=`./.ci/construct_test_command.sh`
 
 script:
-  - token=d9212b19-6bbd-4466-8f45-18414480f879
-  - ci_env="bash <(curl -s https://codecov.io/env)"
-  - ci_post_cov="bash <(curl -s https://codecov.io/bash) -t $token"
-  - docker run -t unit-test-env /bin/bash -c "$ci_env && pytest /root/mantid_total_scattering/ && coverage run -m pytest /root/mantid_total_scattering/  && $ci_post_cov"
+  - docker run -t unit-test-env /bin/bash -c "$test_cmd"
