--- a/Pipfile
+++ b/Pipfile
@@ -6,28 +6,14 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-atomicwrites = "==1.3.0"
-attrs = "==19.1.0"
-decorator = "==4.4.0"
-h5py = "==2.9.0"
-imageio = "==2.5.0"
-kiwisolver = "==1.0.1"
-matplotlib = "==3.0.3"
-more-itertools = "==7.0.0"
-networkx = "==2.3rc1"
-numpy = "==1.16.2"
-pluggy = "==0.9.0"
-py = "==1.8.0"
-pyparsing = "==2.3.1"
-pytest = "==4.4.0"
-python-dateutil = "==2.8.0"
-scikit-image = "==0.15.0"
-scipy = "==1.2.1"
-six = "==1.12.0"
-Cycler = "==0.10.0"
-Pillow = "==6.0.0"
-PyWavelets = "==1.0.2"
-PyYAML = "==5.1"
+h5py = "*"
+matplotlib = "*"
+numpy = "*"
+scikit-image = "*"
+scipy = "*"
+six = "*"
+PyYAML = "*"
+mantid-total-scattering = {editable = true,path = "."}
 
 [requires]
 python_version = "3.6"
