--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ scipy = "*"
 six = "*"
 PyYAML = "*"
 mantid-total-scattering = {editable = true,path = "."}
+versioneer = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.6"
