--- a/.ci/Dockerfile.nightly_ubuntu16.04
+++ b/.ci/Dockerfile.nightly_ubuntu16.04
@@ -1,5 +1,5 @@
 # Install mantid image
-FROM mantidproject/mantid:nightly_ubuntu16.04_python3
+FROM mantidproject/mantid:nightly_ubuntu16.04
 
 
 # Copy git content from current branch
