Switch away from Python3 docker images since too old for new algorithms

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 sudo: required
 language: python
 python:
-  - '3.5'
+  - '2.7'
 branches:
   only:
   - master
 services:
   - docker
 before_install:
-  - docker build -t unit-test-env -f .ci/Dockerfile.nightly_ubuntu16.04_python3 .
+  - docker build -t unit-test-env -f .ci/Dockerfile.nightly_ubuntu16.04 .
   - test_cmd=`./.ci/construct_test_command.sh`
 script:
   - docker run -t unit-test-env /bin/bash -c "$test_cmd"
