--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,4 @@ PyYAML = "*"
 mantid-total-scattering = {editable = true,path = "."}
 versioneer = "*"
 flake8 = "*"
-
-[requires]
-python_version = "3.6"
+pytest = "*"
