--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
       ls /sbin | grep md5;
       bash miniconda.sh -b -p $HOME/miniconda;
       export PATH="$HOME/miniconda/bin:$PATH";
-      conda config --set always_yes yes --set changeps1 no;
+      conda config --set always_yes yes --set changeps1 no --set anaconda_upload yes;
       conda config --add channels conda-forge;
       conda config --add channels mantid;
       conda update  -q conda;
