--- a/.travis.yml
+++ b/.travis.yml
@@ -115,4 +115,4 @@ deploy:
    on:
      branch: master
      tags: true
-     condition: $TYPE = conda AND ($CONDA='2.7' OR $CONDA='3.6')
+     condition: $TYPE = conda
