--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ script:
 
   - |
     if [[ "${TYPE}" == "conda" ]]; then
-      if [[ "${CONDA}" == 2.7.14 || "${CONDA}" == '3.6' ]]; then
+      if [[ "${CONDA}" == '2.7.14' || "${CONDA}" == '3.6' ]]; then
         conda install -c mantid/label/nightly mantid-framework
         python setup.py test;
       fi
