--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: xenial
 language: generic
 
 services:
@@ -57,6 +57,8 @@ before_install:
       wget "${MINICONDA_URL}/${MINICONDA_FILE}";
       bash ${MINICONDA_FILE} -b -p $HOME/miniconda;
       export PATH="$HOME/miniconda/bin:$PATH";
+
+      sudo apt-get install freeglut3-dev libglu1-mesa;
     fi
 
 
@@ -64,7 +66,7 @@ install:
   - |
     if [[ "${TYPE}" == "conda" ]]; then
       conda config --set always_yes yes --set changeps1 no --set anaconda_upload no;
-      conda config --add channels conda-forge --add channels mantid --add channels mantid/label/nightly;
+      conda config --add channels conda-forge --add channels mantid;
       conda update  -q conda;
       conda info -a
 
@@ -89,7 +91,7 @@ script:
   - |
     if [[ "${TYPE}" == "conda" ]]; then
       if [[ "${CONDA}" == '2.7.14' || "${CONDA}" == '3.6' ]]; then
-        conda install -c mantid/label/nightly mantid-framework
+        conda install -c mantid/label/nightly mantid-framework=4
         python setup.py test;
       fi
     fi
