Added pytest to conda setup in travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ install:
       conda update  -q conda;
       conda info -a
 
-      conda create -q -n ${PKG} python=$CONDA flake8 conda-build=3.17 conda-verify anaconda-client;
+      conda create -q -n ${PKG} python=$CONDA flake8 conda-build=3.17 conda-verify anaconda-client pytest;
       source activate ${PKG}
 
       # Build recipe and install 
