Change in syntax for installing mantid-framework in travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ script:
 
   - |
     if [[ "${TYPE}" == "conda" ]]; then
-      conda install -c mantid/label/nightly mantid-framework=4
+      conda install mantid-framework=4 --channel mantid/label/nightly --override-channels
       python setup.py test;
     fi
 
