Pinning to conda==4.7.5 in travis yaml to remedy broken 4.7.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,11 @@ install:
     if [[ "${TYPE}" == "conda" ]]; then
       conda config --set always_yes yes --set changeps1 no --set anaconda_upload no;
       conda config --add channels conda-forge --add channels mantid;
-      conda update  -q conda;
+      # conda update  -q conda
+      # pinned because 4.7.7 is broken when using `conda update -q conda`
+      # can remove this if this issue is closed:
+      # - https://github.com/conda/conda/issues/8934
+      conda install  -q conda==4.7.5;
       conda info -a
 
       conda create -q -n ${PKG} python=$CONDA flake8 conda-build=3.17 conda-verify anaconda-client pytest;
