Re #73 - add test phase to ci

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,3 +35,7 @@ jobs:
       - name: Lint
         shell: bash -l {0}
         run: flake8 . --count
+
+      - name: Test
+        shell: bash -l {0}
+        run: pytest
