Refactor coverage in tox file

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,16 @@
 [tox]
-envlist = py36,py37,lint,lint-security,coverage
+envlist = py37,lint,lint-security,coverage
 
 
 [gh-actions]
 python =
-  3.6: py36
   3.7: py37
 
 [testenv]
-conda_channels = 
+conda_channels =
     conda-forge
     mantid
-conda_deps = 
+conda_deps =
     mantid-framework
 deps =
     -r{toxinidir}/requirements.txt
@@ -28,5 +27,13 @@ deps = bandit
 commands = bandit -r total_scattering/ -x total_scattering/_version.py
 
 [testenv:coverage]
-deps = pytest-cov
-commands = pytest --cov=total_scattering --cov-report=term-missing tests/
+conda_channels =
+    conda-forge
+    mantid
+conda_deps =
+    mantid-framework
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-dev.txt
+commands =
+    pytest --cov=total_scattering --cov-report=term-missing tests/
