--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,7 @@
 name: mantid_total_scattering_ci
 
-env: {}
+env:
+  PYTHON_MAIN_VERSION: 3.7
 
 on:
   push:
@@ -15,8 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04]
-        python-version: ["3.6", "3.7"]
+        os: [ubuntu-latest]
+        python-version: ["3.7"]
 
     steps:
       - uses: actions/checkout@v2
@@ -31,11 +32,23 @@ jobs:
         run: |
           conda install mantid-framework
           conda install --file requirements.txt --file requirements-dev.txt
+          pip install tox-gh-actions
 
-      - name: Lint
+      - name: Lint with Tox
+        if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION }}
         shell: bash -l {0}
-        run: flake8 . --count
+        run: |
+          tox -e lint
+          tox -e lint-security
 
-      - name: Test
+      - name: Test with Tox
         shell: bash -l {0}
-        run: pytest
+        run: tox
+
+      - name: Coverage - create and upload report
+        shell: bash -l {0}
+        if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION }}
+        run: |
+          tox -e coverage
+          pip install coverage
+          bash <(curl -s https://codecov.io/bash)
