Adds pull request to Actions yaml

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,6 +9,9 @@ on:
       - '*'
     tags:
       - 'v*'
+  pull_request:
+    types: [ opened, edited, reopened, review_requested ]
+    branches: [ master ] 
 
 jobs:
   linux:
