Change syntax for pull request for actions yaml

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,8 +10,8 @@ on:
     tags:
       - 'v*'
   pull_request:
-    types: [ opened, edited, reopened, review_requested ]
-    branches: [ master ] 
+    branches:
+      - '*'
 
 jobs:
   linux:
