Switches to using requirements in tox.ini for lint and security

--- a/tox.ini
+++ b/tox.ini
@@ -19,11 +19,15 @@ commands =
     pytest {posargs}
 
 [testenv:lint]
-deps = flake8
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-dev.txt
 commands = flake8 total_scattering/ tests/ setup.py --count
 
 [testenv:lint-security]
-deps = bandit
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-dev.txt
 commands = bandit -r total_scattering/ -x total_scattering/_version.py
 
 [testenv:coverage]
