Switches to skip_install for lint and security in tox

--- a/tox.ini
+++ b/tox.ini
@@ -19,15 +19,13 @@ commands =
     pytest {posargs}
 
 [testenv:lint]
-deps =
-    -r{toxinidir}/requirements.txt
-    -r{toxinidir}/requirements-dev.txt
+skip_install = True
+deps = flake8
 commands = flake8 total_scattering/ tests/ setup.py --count
 
 [testenv:lint-security]
-deps =
-    -r{toxinidir}/requirements.txt
-    -r{toxinidir}/requirements-dev.txt
+skip_install = True
+deps = bandit
 commands = bandit -r total_scattering/ -x total_scattering/_version.py
 
 [testenv:coverage]
