--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ python =
   3.7: py37
 
 [testenv]
+skip_install = True
 conda_channels =
     conda-forge
     mantid
@@ -29,6 +30,7 @@ deps = bandit
 commands = bandit -r total_scattering/ -x total_scattering/_version.py
 
 [testenv:coverage]
+skip_install = True
 conda_channels =
     conda-forge
     mantid
