Re #95 - Adds matplotlib and scikit to conda recipe

--- a/conda.recipe/mantid-total-scattering/meta.yaml
+++ b/conda.recipe/mantid-total-scattering/meta.yaml
@@ -16,10 +16,14 @@ requirements:
     - mantid-framework=5
     - python
     - setuptools
+    - matplotlib
+    - scikit-learn
 
   run:
     - mantid-framework=5
     - python
+    - matplotlib
+    - scikit-learn
 
 test:
   imports:
