--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -77,3 +77,12 @@ jobs:
           cd conda.recipe/mantid-total-scattering-python-wrapper
           conda build --output-folder . .
           anaconda upload --label main noarch/*.tar.bz2
+
+      - name: Trigger ORNL GitLab Pipeline for DEV
+        if: ${{ github.ref == 'refs/heads/next' }}
+        run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=master -F variables[PLAY]=conda/update -F variables[CONDA_ENV]=mantidtotalscattering-dev ${{ secrets.GITLAB_TRIGGER_URL }} > /dev/null
+
+      - name: Trigger ORNL GitLab Pipeline for PROD 
+        if: startsWith( github.ref, 'refs/tags/v') && ${{ github.ref == 'refs/heads/next' }}
+        run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=master -F variables[PLAY]=conda/update -F variables[CONDA_ENV]=mantidtotalscattering ${{ secrets.GITLAB_TRIGGER_URL }} > /dev/null
+
