Adds matplotlib and scikit to mts wrapper recipe

--- a/conda.recipe/mantid-total-scattering-python-wrapper/meta.yaml
+++ b/conda.recipe/mantid-total-scattering-python-wrapper/meta.yaml
@@ -16,9 +16,13 @@ requirements:
   build:
     - python
     - setuptools
+    - matplotlib
+    - scikit-learn
 
   run:
     - python
+    - matplotlib
+    - scikit-learn
 
 test:
   imports:
