finish with normalization unit tests
Signed-off-by: Jose Borreguero <borreguero@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-dev.txt
 commands =
+    python tests/data/remote_files.py
     pytest {posargs}
 
 [testenv:lint]
