--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -87,6 +87,10 @@ jobs:
         if: ${{ github.ref == 'refs/heads/next' }}
         run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=main -F variables[PLAY]=conda/update -F variables[CONDA_ENV]=mantidtotalscattering-dev ${{ secrets.GITLAB_TRIGGER_URL }} > /dev/null
 
+      - name: Trigger ORNL GitLab Pipeline for QA
+        if: ${{ github.ref == 'refs/heads/qa' }}
+        run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=main -F variables[PLAY]=conda/update -F variables[CONDA_ENV]=mantidtotalscattering-qa ${{ secrets.GITLAB_TRIGGER_URL }} > /dev/null
+
       - name: Trigger ORNL GitLab Pipeline for PROD 
         if: startsWith( github.ref, 'refs/tags/v')
         run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=main -F variables[PLAY]=conda/update -F variables[CONDA_ENV]=mantidtotalscattering ${{ secrets.GITLAB_TRIGGER_URL }} > /dev/null
