Switches to nightly mantid channel in tox conda channels

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ python =
 skip_install = True
 conda_channels =
     conda-forge
-    mantid
+    mantid/label/nightly
 conda_deps =
     mantid-framework
 deps =
@@ -34,7 +34,7 @@ commands = bandit -r total_scattering/ -x total_scattering/_version.py
 skip_install = True
 conda_channels =
     conda-forge
-    mantid
+    mantid/label/nightly
 conda_deps =
     mantid-framework
 deps =
