--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,7 @@
 name: mantid_total_scattering_ci
 
 env:
-  PYTHON_MAIN_VERSION: 3.7
+  PYTHON_MAIN_VERSION: 3.8
 
 on:
   workflow_dispatch:
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.7"]
+        python-version: ["3.8"]
 
     steps:
       - uses: actions/checkout@v2
@@ -38,7 +38,7 @@ jobs:
       - name: Conda install deps
         shell: bash -l {0}
         run: |
-          conda install mantid-framework
+          conda install mantid
           conda install --file requirements.txt --file requirements-dev.txt
           pip install tox-gh-actions
 
