update mantid framework

--- a/conda.recipe/mantid-total-scattering/meta.yaml
+++ b/conda.recipe/mantid-total-scattering/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - scikit-learn
 
   run:
-    - mantid-framework=6
+    - mantid=6
     - python
     - matplotlib
     - scikit-learn
