--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ conda_channels =
     conda-forge
     mantid/label/nightly
 conda_deps =
-    mantid-framework
+    mantid
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-dev.txt
