--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,18 +5,10 @@ env:
 
 on:
   workflow_dispatch:
-    branches:
-      - '*'
-    tags:
-      - 'v*'
-  push:
-    branches:
-      - '*'
-    tags:
-      - 'v*'
   pull_request:
-    branches:
-      - '*'
+  push:
+    branches: [next]
+    tags: ['v*']
 
 jobs:
   linux:
@@ -83,15 +75,32 @@ jobs:
           conda build --output-folder . .
           anaconda upload --label main noarch/*.tar.bz2
 
-      - name: Trigger ORNL GitLab Pipeline for DEV
-        if: ${{ github.ref == 'refs/heads/next' }}
-        run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=main -F variables[PLAY]=update -F variables[CONDA_ENV]=mantidtotalscattering-dev ${{ secrets.GITLAB_TRIGGER_URL }}
-        #run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=main -F variables[PLAY]=conda/update -F variables[CONDA_ENV]=mantidtotalscattering-dev ${{ secrets.GITLAB_TRIGGER_URL }} > /dev/null
+  trigger-deploy:
+    runs-on: ubuntu-22.04
+    needs: [linux]
+    # only trigger deploys from protected branches and tags
+    if: ${{ github.ref_protected || github.ref_type == 'tag' }}
+    steps:
+      - name: Determine Environment
+        uses: neutrons/branch-mapper@main
+        id: conda_env_name
+        with:
+          prefix: mantidtotalscattering
 
-      - name: Trigger ORNL GitLab Pipeline for QA
-        if: ${{ github.ref == 'refs/heads/qa' }}
-        run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=main -F variables[PLAY]=update -F variables[CONDA_ENV]=mantidtotalscattering-qa ${{ secrets.GITLAB_TRIGGER_URL }} > /dev/null
+      - name: Trigger deploy
+        id: trigger
+        uses: eic/trigger-gitlab-ci@v2
+        with:
+          url: https://code.ornl.gov
+          token: ${{ secrets.GITLAB_TRIGGER_TOKEN }}
+          project_id: 7835
+          ref_name: main
+          variables: |
+            PLAY="update"
+            CONDA_ENV="${{ steps.conda_env_name.outputs.name }}"
 
-      - name: Trigger ORNL GitLab Pipeline for PROD
-        if: startsWith( github.ref, 'refs/tags/v')
-        run: curl -sX POST -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} -F ref=main -F variables[PLAY]=update -F variables[CONDA_ENV]=mantidtotalscattering ${{ secrets.GITLAB_TRIGGER_URL }} > /dev/null
+      - name: Annotate commit
+        uses: peter-evans/commit-comment@v2
+        with:
+          body: |
+            GitLab pipeline for ${{ steps.conda_env_name.outputs.name }} has been submitted for this commit: ${{ steps.trigger.outputs.web_url }}
