--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -69,11 +69,14 @@ jobs:
         if: startsWith( github.ref, 'refs/tags/v')
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
+          IS_RC: ${{ contains(github.ref, 'rc') }}
         run: |
           conda install -y anaconda-client conda-build conda-verify
           cd conda.recipe/mantid-total-scattering-python-wrapper
           conda build --output-folder . .
-          anaconda upload --label main noarch/*.tar.bz2
+          CONDA_LABEL="main"
+          if [ "${IS_RC}" = "true" ]; then CONDA_LABEL="rc"; fi
+          anaconda upload --label $CONDA_LABEL noarch/*.tar.bz2
 
   trigger-deploy:
     runs-on: ubuntu-22.04
