--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           conda install mantid
           conda install --file requirements.txt --file requirements-dev.txt
-          pip install tox-gh-actions
+          pip install tox-gh-actions==2.12.0
 
       - name: Lint with Tox
         if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION }}
