--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,8 +43,9 @@ jobs:
 
       - name: Test with Tox
         shell: bash -l {0}
-        run: sudo apt-get install libglu1-mesa
-        run: tox
+        run: |
+          sudo apt-get install libglu1-mesa
+          tox
 
       - name: Coverage - create and upload report
         shell: bash -l {0}
