--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Conda install deps
         shell: bash -l {0}
         run: |
-          conda install mantid
+          conda install mantidworkbench
           conda install --file requirements-conda.txt --file requirements-dev-conda.txt
           pip install tox-gh-actions==2.12.0
           pip install https://oncat.ornl.gov/packages/pyoncat-1.5.1-py3-none-any.whl
