pin a consistent version of mantid dependence for build and run

--- a/conda.recipe/mantid-total-scattering/meta.yaml
+++ b/conda.recipe/mantid-total-scattering/meta.yaml
@@ -13,7 +13,7 @@ build:
 
 requirements:
   build:
-    - mantidworkbench>6.6
+    - {{ pin_compatible("mantid", min_pin="6.8") }}
     - python
     - setuptools
     - matplotlib
