--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,7 +33,7 @@ jobs:
           conda install mantidworkbench
           conda install --file requirements-conda.txt --file requirements-dev-conda.txt
           pip install tox-gh-actions==2.12.0
-          pip install https://oncat.ornl.gov/packages/pyoncat-1.5.1-py3-none-any.whl
+          # pip install https://oncat.ornl.gov/packages/pyoncat-1.5.1-py3-none-any.whl
 
       - name: Lint with Tox
         if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION }}
