--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-          channels: conda-forge,mantid/label/nightly
+          channels: conda-forge,mantid/label/nightly,oncat
 
       - name: Conda install deps
         shell: bash -l {0}
