fix mantid version to 6p8p0

--- a/conda.recipe/mantid-total-scattering/meta.yaml
+++ b/conda.recipe/mantid-total-scattering/meta.yaml
@@ -13,14 +13,14 @@ build:
 
 requirements:
   build:
-    - {{ pin_compatible("mantidworkbench", pin="6.8") }}
+    - mantidworkbench=6.8
     - python
     - setuptools
     - matplotlib
     - scikit-learn
 
   run:
-    - {{ pin_compatible("mantidworkbench", pin="6.8") }}
+    - mantidworkbench=6.8
     - python
     - pystog
     - pyoncat
